[AGJ-2] go mod 다운로드시 ssl 주소인 경우 다운로드 안되는 이슈 해결

--- a/Dockerfile.test
+++ b/Dockerfile.test
@@ -2,7 +2,7 @@ FROM golang:1.12-alpine
 
 # Install git
 
-RUN apk update && apk add --no-cache git
+RUN apk update && apk add --no-cache ca-certificates git
 
 WORKDIR /app
 
