--- a/Dockerfile.test
+++ b/Dockerfile.test
@@ -2,7 +2,7 @@ FROM golang:alpine
 
 # Install git.
 # Git is required for fetching the dependencies.
-RUN apk update && apk add --no-cache git
+RUN apk update && apk add --no-cache ca-certificates git
 
 # Set the current working directory inside the container
 WORKDIR /app
