--- a/.env
+++ b/.env
@@ -26,13 +26,13 @@ DB_NAME=fullstack_mysql
 DB_PORT=3306 #Default mysql port
 
 # # Mysql Test
-TestDbHost=127.0.0.1
-TestDbDriver=mysql
-TestApiSecret=98hbun98h
-TestDbUser=steven
-TestDbPassword=here
-TestDbName=fullstack_api_test
-TestDbPort=3306
+TEST_DB_HOST=127.0.0.1
+TEST_DB_DRIVER=mysql
+TEST_API_SECRET=98hbun98h
+TEST_DB_USER=steven
+TEST_DB_PASSWORD=here
+TEST_DB_NAME=fullstack_api_test
+TEST_DB_PORT=3306
 
 # sqlite live
 #DB_DRIVER=sqlite3
