--- a/.env
+++ b/.env
@@ -17,7 +17,7 @@
 # TestDbPort=5432
 
 # Mysql Live
-DB_HOST=127.0.0.1
+DB_HOST=fullstack-mysql
 DB_DRIVER=mysql
 API_SECRET=98hbun98h #Used for creating a JWT. Can be anything
 DB_USER=steven
