--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     networks:
       - fullstack
 
-  fullstack:
+  fullstack-mysql:
     image: mysql:5.7
     container_name: full_db_mysql
     ports:
