--- a/docker-compose-app-mysql-test.yml
+++ b/docker-compose-app-mysql-test.yml
@@ -1,5 +1,17 @@
 version: '3'
 services:
+  app_test:
+    container_name: full_app_test
+    build:
+      context: .
+      dockerfile: ./Dockerfile.test
+    volumes:
+      - api_test:/app/src/app/
+    depends_on:
+      - mysql_test
+    networks:
+      - fullstack_test
+
   mysql_test:
     image: mysql:5.7
     container_name: full_db_test_mysql
