--- a/deployments/app-mysql-deployment.yaml
+++ b/deployments/app-mysql-deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec: 
       containers:
       - name: fullstack-app-mysql 
-        image: victorsteven/fullstack:1.3.1
+        image: kenshin579/advenoh:go-jwt-mysql-fullstack
         imagePullPolicy: IfNotPresent
         ports:
           - name: http
